[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/PressurePlate.gd" type="Script" id=1]
[ext_resource path="res://Assets/pressure_plate.png" type="Texture" id=2]
[ext_resource path="res://Audio/switch.wav" type="AudioStream" id=3]

[node name="PressurePlate" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
trigger_node = "Doors"
is_switch = false

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 112, 113 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="1"]

position = Vector2( -114.197, 172.057 )
build_mode = 0
polygon = PoolVector2Array( 111.727, -218.654, 159.675, -171.163, 112.64, -125.042, 65.1496, -172.076 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="SfxTrigger" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 3 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="." to="." method="_on_PressurePlate_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_PressurePlate_body_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


